# EasyTgBot

./: .gitignore  pyproject.toml
src/: bot.py  docker-compose.yml  main.py  run.py
src/alembic/: env.py
src/alembic/versions/: 2023_10_11_1708-6d330b508477_create_users_table.py
src/config/: __init__.py  config.py
src/docker/: docker-compose.yml  redis.conf
src/handlers/: __init__.py  budget.py  cats.py  empty.py  menu_main.py  register.py  start.py
src/handlers/admin/: __init__.py  account_manage.py  main_admin.py  user_managment.py
src/handlers/empty/: __init__.py  empty.py
src/handlers/start/: __init__.py  start.py
src/keyboards/data/: __init__.py  admin.py  admin_user_managment.py  budget.py  menu_main.py  send_contact.py
src/keyboards/kb/: __init__.py  admin_menu.py  menu_admin.py  menu_budget.py  menu_main.py  send_contact.py
src/models/: __init__.py  user.py
src/models/budget/: __init__.py  account.py
src/models/message/: __init__.py  answer.py
src/models/systems/: __init__.py
src/models/users/: __init__.py  user.py
src/utils/config/: config.py
src/utils/database/: __init__.py  db.py
src/utils/database/crud/: __init__.py  account.py  user.py
src/utils/enums/: __init__.py  flags.py
src/utils/middleware/: __init__.py  long_time.py
src/utils/middleware/security/: __init__.py  admin.py
src/utils/models/: __init__.py  type_annotated.py
src/utils/startup/: __init__.py  admin_notify.py
src/utils/states/: __init__.py  admin.py  budget.py  main.py  register.py
