[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram Bot"
authors = ["Alexey Popkov <AlexeyPopkov@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
