[tool.poetry]
name = "tgbot"
version = "0.1.0"
description = "Telegram Bot"
authors = ["Alexey Popkov <AlexeyPopkov@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.21"
greenlet = "^3.0.0"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
